--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@nextui-org/react": "^2.4.6",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -24,15 +25,19 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.12.5",
     "framer-motion": "^11.3.24",
     "lucide-react": "^0.427.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.1",
