--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@firebase/auth": "^1.7.7",
     "@nextui-org/react": "^2.4.6",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -26,6 +27,7 @@
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "firebase": "^10.12.5",
     "framer-motion": "^11.3.24",
     "lucide-react": "^0.427.0",
