--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "framer-motion": "^11.3.24",
     "lucide-react": "^0.427.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.5",
+    "next": "^14.2.6",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "qss": "^3.0.0",
