--- a/package.json
+++ b/package.json
@@ -13,20 +13,28 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@firebase/auth": "^1.7.7",
     "@nextui-org/react": "^2.4.6",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@react-three/drei": "^9.109.5",
     "@react-three/fiber": "^8.17.5",
     "@tabler/icons-react": "^3.12.0",
+    "@tanstack/react-table": "^8.20.5",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "axios": "^1.7.4",
+    "button": "^1.1.1",
+    "checkbox": "^0.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "dotenv": "^16.4.5",
+    "dropdown-menu": "^0.1.1",
     "env": "^0.0.2",
     "firebase": "^10.12.5",
     "framer-motion": "^11.3.24",
@@ -41,8 +49,9 @@
     "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
+    "recharts": "^2.12.7",
     "simplex-noise": "^4.0.3",
-    "tailwind-merge": "^2.5.1",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.167.1",
     "three-globe": "^2.31.1"
